--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿altair==5.5.0
+altair==5.5.0
 anyio==4.10.0
 argon2-cffi==25.1.0
 argon2-cffi-bindings==25.1.0
@@ -104,7 +104,6 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-json-logger==3.3.0
 pytz==2025.2
-pywinpty==2.0.15
 PyYAML==6.0.2
 pyzmq==27.0.1
 referencing==0.36.2
